# Ocean-LETKF

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  README.md
src/3dvar/: 3dvar_main.f90  3dvar_tools.f90  B_error_cov.f90  H_operator.f90  README.md  minimization_algorithms.f90
src/common_all/: .kdtree.f90.062616.swp  CMakeLists.txt  README  README.md  common.f90  common_letkf.f90  common_mpi.f90  common_mtx.f90  common_obs.f90  kdtree.f90  kdtree.f90.062616  kdtree.f90.orig
src/godas_support/PREP_ALT/SRC/: Makefile.GAEA  Makefile.WCOSS  spltWkAlt4.c
src/godas_support/PREP_SBC/: mPS.csh
src/godas_support/PREP_SBC/SRC/: Makefile.mDSt4i  mkDlySst4i.c
src/godas_support/PTMP_SAL/: cDG.csh  incDate
src/godas_support/PTMP_SAL/SRC/: Makefile.cDLPs4nc_realobs  Makefile.cDLPs4nc_synth  cmbDLstPs4nc_realobs.c
src/godas_support/VARr/SRC/: mkEvNc4r.c
src/godas_support/tools/: tmpa.ctl
src/grads/GS/: avgssprd_9198.gs  avgtsprd.gs  maxtsprd.gs  maxtsprd_9198.gs  mintsprd.gs
src/grads/LETKF_IO/: anal000.ocean_temp_salt.res.ctl  gues_sp.ctl  test.ocean_velocity.res.ctl
src/grads/MOM4p1_RESTARTS/: ocean_frazil.res.ctl  yyyymmdd.ocean_velocity.res.ctl
src/grads/NCEP_DOE_R2/: SFR_U10.ctl
src/grads/OTHER/: oml.ctl  yyyymmddhh.om3_core3.ctl
src/letkf/: .input.nml.swp  .letkf_local.f90.kdtree.swp  CMakeLists.txt  README  README.md  input.nml  letkf.f90  letkf_local.f90  letkf_local.f90.bruteforce  letkf_local.f90.kdtree  letkf_obs.f90.new  letkf_obs.f90.orig  letkf_tools.f90  lnkcommon.sh  make_letkf.c3.sh  params_letkf.f90  params_model.f90  test_ESMF.sh  vars_letkf.f90  vars_model.f90.fpp
src/letkf/CONFIG_letkf.EXP_M2O.056/: common_mom4.f90  params_obs.f90
src/letkf/CONFIG_letkf.TESTc3.x/: letkf.f90
src/letkf/HOLD/: Makefile  README  fmkmf.pl  letkf_local.f90.orig  letkf_local.f90.panels  letkf_tools.f90.hold  lnkcommon.sh  model_class.f90  observation_class.f90  setup_makefile.sh  test_env.pl  test_pl.f90  ulnkcommon.sh  vars_model.f90.dynamic  vars_model.f90.static
src/letkf/HOLD/CONFIG_letkf.EXP_M2O.056/: letkf.f90  letkf_tools.f90  params_model.f90
src/letkf/HOLD/CONFIG_letkf.EXP_M2O.x/: common_mpi.f90  common_mpi_mom4.f90
src/letkf/HOLD/CONFIG_letkf.TEST5.056/: common_mom4.f90  common_mpi_mom4.f90  kdtree.f90  letkf.f90  letkf_tools.f90  params_model.f90  vars_model.f90
src/letkf/HOLD/CONFIG_letkf.TEST5.x/: common_letkf.f90
src/letkf/HOLD/CONFIG_letkf.TEST5_dyn.x/: common_obs_mom4.f90
src/letkf/HOLD/CONFIG_letkf.TEST6.x/: common.f90  common_mtx.f90  letkf_local.f90  vars_model.f90
src/letkf/HOLD/CONFIG_letkf.TESTc3.x/: common_mom4.f90  common_obs_mom4.f90  vars_letkf.f90  vars_model.f90
src/letkf/HOLD/CONFIG_letkf.mergetest.x/: common_mom4.f90  common_mpi_mom4.f90  common_obs_mom4.f90  letkf.f90  letkf_local.f90  letkf_tools.f90  vars_letkf.f90
src/model_specific/: CMakeLists.txt  README  README.md
src/model_specific/cice5/: common_cice5.f90  common_cice5.f90.orig  common_debug_cice5.f90  common_mpi_cice5.f90  common_obs_cice5.f90  params_model.f90
src/model_specific/grads/GS/: avgtsprd_9198.gs  cbarm.gs  maxssprd_9198.gs
src/model_specific/grads/LETKF_IO/: anal_sp.ctl  infl_out.ctl  test.ocean_temp_salt.res.ctl
src/model_specific/hycom/: README  common_debug_hycom.f90  common_hycom.f90  common_mpi_hycom.f90  common_obs_hycom.f90  common_obs_hycom.f90.kdtree  common_obs_hycom.f90.old  hycom_io.f90  mod_ppsw.F  params_model.f90  params_model.f90.hycom  test_io.f90  vars_model.f90
src/model_specific/hycom_nrl/: README  README.runtime  common_debug_hycom_nrl.f90  common_hycom_nrl.f90  common_mpi_hycom_nrl.f90  common_obs_hycom_nrl.f90  hycom_nrl_io.f90  input_nml_hycom_nrl.f90  params_model.f90  vars_model.f90
src/model_specific/mom4/: .common_obs_mom4.f90.kdtree.swp  .common_obs_mom4.f90.new.swp  common_debug_mom4.f90  common_mom4.f90  common_mpi_mom4.f90  common_mpi_mom4.f90.new  common_obs_mom4.f90  common_obs_mom4.f90.kdtree  common_obs_mom4.f90.new  common_obs_mom4.f90.orig  grid_spec.nc  input_nml_mom4.f90  params_model.f90.fpp  vars_model.f90  vars_model.f90.fpp
src/model_specific/mom6/: CMakeLists.txt  common_debug_mom6.f90  common_mom6.f90  common_mpi_mom6.f90  common_obs_mom6.f90  common_obs_mom6.f90.kdtree  common_obs_mom6.f90.orig  gdas_diagfile_io.f90  input_nml_mom6.f90  params_model.f90  vars_model.f90
src/model_specific/nemo/: .nfs0000000001ddda56000023f8  common_debug_nemo.f90  common_mpi_nemo.f90  common_nemo.f90  common_obs_nemo.f90  params_model.f90  test_read.f90  vars_model.f90
src/model_specific/roms/: common_debug_roms.f90  common_mpi_roms.f90  common_mpi_roms.f90.new  common_mpi_roms.f90.orig  common_obs_roms.f90  common_roms.f90  grd.nc  input_nml_roms.f90  params_model.f90  vars_model.f90
src/model_specific/sis/: common_debug_sis.f90  common_mpi_sis.f90  common_obs_sis.f90  common_sis.f90  input_nml_sis.f90  params_model.f90  vars_model.f90
src/obs/: .obsop_tprof.f90.swp  20001231tmp.nc  20070102adt.nc  20070102sal.nc  20110101001735-NODC-L3C_GHRSST-SSTskin-AVHRR_Pathfinder-PFV5.2_NOAA19_G_2011001_night-v02.0-fv01.0.nc  CMakeLists.txt  README.md  compute_profile_error.f90  cpo_compile_obs.o182398  cpo_compile_obs.o295096  cpo_compile_obs.o430218  decoder_sss_smap.f90  decoder_sst_acspo.f90  decoder_sst_viirs.f90  grid_spec.nc  gsw_pot_to_insitu.f90  gues.ocean_temp_salt.res.nc  obsop_adt.f90  obsop_bufr_adt.f90  obsop_bufr_sprof.f90  obsop_bufr_sst.f90  obsop_bufr_tprof.f90  obsop_ecmwf_sprof.f90  obsop_ecmwf_tprof.f90  obsop_ncoda_ssh.f90  obsop_sprof.f90  obsop_sss.f90  obsop_sst.f90  obsop_sst_acspo.f90  obsop_sst_geostationary.f90  obsop_sst_podaac.f90  obsop_sst_viirs.f90  obsop_tprof.f90  params_obs.f90  read_abi_acspo.f90  read_argo.f90  read_avhrr_pathfinder.f90  read_aviso_adt.f90  read_bufr.f90  read_bufr_hycom.f90  (+10 more)
src/obs/HOLD/: gsw_oceanographic_toolbox.f90  lnkcommon.sh  make_obsop_all.c3.sh  ppsw.f  temp.txt  ulnkcommon.sh
src/obs/gsw_fortran_v3_03/: README
src/obs/sample_data/: 19910101tmp.nc  20070102slm.nc  20070102tmp.nc
src/obs/tools/: README  obsdump.f90  obsdump.sh
(+817 files in other folders)
